# kbk_attendance_server

./: ATTENDANCE_PROCESSING_GUIDE.md  ATTENDANCE_SYSTEM_UPGRADE.md  Cargo.toml  DURATION_LIMITS_EXPLAINED.md  MIDNIGHT_CROSSING_SOLUTIONS.md  TIMEZONE_FIX_SUMMARY.md  TIMEZONE_SOLUTIONS.md  deploy.sh  fix_midnight_crossing.sql  populate_default_time_settings.sql  populate_sessions_from_checkins.sql  populate_sessions_from_checkins_improved.sql  simulated_checkins_data.sql  test_midnight_crossing.sql
migrations/: 001_initial_schema.sql  002_attendance_sessions.sql  003_remove_department_code.sql  004_add_user_name_column.sql  005_user_time_settings.sql
src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  sync.rs  timezone_config.rs
src/admin/: admin_users.rs  auth.rs  checkins.rs  mod.rs  models.rs  points.rs  stats.rs  sync.rs  time_settings.rs  users.rs
src/ui/: admin.html  admin.js  api.js  auth.js  department.html  login.html  stats.js  style.css
